chore: consolidar cambios recientes — integrar features, fixes e infraestructura
feat: integrar catálogos y recomendación de componentes

Añade integración y parsing avanzado para Mouser.
Servicio de recomendación y mejoras en priorización.
feat: RAG y agente AI

Nueva infra de RAG para procesar/indexar documentos.
Agente LangChain y herramientas auxiliares.
feat: simulación y tutor

Servicio de simulación (buck/boost) y TutorService que expone el agente.
fix: correcciones y robustez

Reemplaza prints por logging, corrige create_app() en run.py.
Reactiva validaciones en selector de componentes y mejora mensajes.
chore: dependencias & limpieza

Actualiza pyproject.toml.
Elimina digikey.py y lcsc.py.
Añade locales y traducciones.
refactor: i18n y presentación

spec_schema y gradio_app internacionalizados y reorganizados.

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,5 @@
 # API Keys for Component Catalogs
-
-# DigiKey OAuth2 credentials
-DIGIKEY_CLIENT_ID=your_digikey_client_id_here
-DIGIKEY_CLIENT_SECRET=your_digikey_client_secret_here
-DIGIKEY_USE_SANDBOX=true  # Set to 'false' for production API
-DIGIKEY_REFRESH_TOKEN=  # Required for Sandbox (run examples/digikey_oauth_authorize.py)
-
-# Mouser API key
 MOUSER_API_KEY=your_mouser_api_key_here # This one is what we are using
-
-# LCSC API key
-LCSC_API_KEY=your_lcsc_api_key_here
 
 # Redis Cache Configuration
 REDIS_HOST=localhost
@@ -28,3 +17,15 @@ DEFAULT_WEIGHT_COST=0.30
 DEFAULT_WEIGHT_AVAILABILITY=0.25
 DEFAULT_WEIGHT_EFFICIENCY=0.25
 DEFAULT_WEIGHT_THERMAL=0.20
+
+# Development/Debug Settings
+DEBUG=           # Set to '1' to enable DEBUG level logging (default: INFO)
+LOG_TO_FILE=     # Set to '1' to write logs to component_search.log
+SKIP_VALIDATION= # Set to '1' to bypass component requirements validation (testing only)
+
+# RAG / Document Processing Configuration
+UNSTRUCTURED_API_KEY=      # Get from https://platform.unstructured.io
+PINECONE_API_KEY=          # Get from https://app.pinecone.io
+PINECONE_INDEX_NAME=tutor-rag-index
+PINECONE_CLOUD=aws         # or 'gcp', 'azure'
+PINECONE_REGION=us-east-1  # Free tier region
